# CUDA-CLion-CMake-Linux

./: CMakeLists.txt  README.md  cudaHeaders.h  cudaMain.cu  cudaMain.h  vecAdd.cu  vecAdd.h
